# aiwriter-backend

./: ALEMBIC_SETUP.md  DATABASE_STRATEGY.md  PHASE3_README.md  PHASE3_VPS_DEPLOYMENT.md  QUOTA_MANAGEMENT.md  VPS_DATABASE_UPDATE.md  add_debugging.sh  aiwriter.db  alembic.ini  check_locks.py  comprehensive_fix.sh  debug_phase3_vps.py  deploy_comprehensive_fixes.sh  deploy_gpt5.sh  deploy_gpt5_fix.sh  deploy_phase3.sh  deploy_to_vps.sh  env.example  fix_alembic_revisions.py  fix_gpt5_direct.sh  fix_gpt5_temperature.sh  fix_openai_params.sh  fix_openai_sdk.sh  fix_timeout_and_json.sh  manual_add_phase35_columns.py  migrate_phase3.sh  nginx_timeout_fix.conf  pyproject.toml  quota_management.sql  quota_manager.py  requirements.txt  setup_db.py  test_api.py  test_fixes.sh  test_gpt5.py  test_openai_compatibility.py  test_openai_params.py  test_phase3.py  test_wordpress_endpoint.py  test_wordpress_rest.py
aiwriter_backend/: __init__.py  main.py
aiwriter_backend/core/: config.py  logging.py  openai_client.py  security.py
aiwriter_backend/db/: base.py  init_db.py  session.py
aiwriter_backend/routers/: jobs.py  license.py  scheduler.py  webhook.py
aiwriter_backend/schemas/: job.py  license.py  scheduler.py  webhook.py
aiwriter_backend/services/: article_generator.py  image_service.py  job_service.py  license_service.py  openai_service.py  scheduler_service.py  simple_article_cli.py  webhook_service.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_callback_url.py  003_phase3_article_fields.py  (+2 more)
scripts/: create_admin.py  seed_plans.py
